--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,22 +21,11 @@ jobs:
     - name: Set up Python 3.x
       uses: actions/setup-python@v2
       with:
-        python-version: "3.x"
+        python-version: "3.9.5"
     - name: 'Install dependencies'
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Install ChromeDriver
-      run: |
-            CHROME_VERSION=$(google-chrome --version | cut -f 3 -d ' ' | cut -d '.' -f 1) \
-              && CHROMEDRIVER_RELEASE=$(curl --location --fail --retry 3 http://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION}) \
-              && curl --silent --show-error --location --fail --retry 3 --output /tmp/chromedriver_linux64.zip "http://chromedriver.storage.googleapis.com/$CHROMEDRIVER_RELEASE/chromedriver_linux64.zip" \
-              && cd /tmp \
-              && unzip chromedriver_linux64.zip \
-              && rm -rf chromedriver_linux64.zip \
-              && sudo mv chromedriver /usr/local/bin/chromedriver \
-              && sudo chmod +x /usr/local/bin/chromedriver \
-              && chromedriver --version
     - name: 'chd-daka'
       env:
         username: ${{ secrets.username }}
