--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -8,8 +8,6 @@ on:
   schedule:
     - cron: '35 23/5 * * *'
     
-    
-
 jobs:
   build:
 
@@ -18,7 +16,7 @@ jobs:
     steps:
     - name: 'Checkout codes'
       uses: actions/checkout@v2
-    - name: Set up Python 3.x
+    - name: Set up Python 3.9.5
       uses: actions/setup-python@v2
       with:
         python-version: "3.9.5"
@@ -26,17 +24,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    # - name: Install ChromeDriver
-    #   run: |
-    #         CHROME_VERSION=$(google-chrome --version | cut -f 3 -d ' ' | cut -d '.' -f 1) \
-    #           && CHROMEDRIVER_RELEASE=$(curl --location --fail --retry 3 http://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION}) \
-    #           && curl --silent --show-error --location --fail --retry 3 --output /tmp/chromedriver_linux64.zip "http://chromedriver.storage.googleapis.com/$CHROMEDRIVER_RELEASE/chromedriver_linux64.zip" \
-    #           && cd /tmp \
-    #           && unzip chromedriver_linux64.zip \
-    #           && rm -rf chromedriver_linux64.zip \
-    #           && sudo mv chromedriver /usr/local/bin/chromedriver \
-    #           && sudo chmod +x /usr/local/bin/chromedriver \
-    #           && chromedriver --version
     - name: 'chd-daka'
       env:
         username: ${{ secrets.username }}
