--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -6,7 +6,7 @@ name: chd-daka
 on:
   push:
   schedule:
-    - cron: '35 23/5 * * *'
+    - cron: '35 5,23 * * *'
     
 jobs:
   build:
@@ -15,6 +15,10 @@ jobs:
     steps:
     - name: 'Checkout codes'
       uses: actions/checkout@v2
+      # 设置服务器时区为东八区 
+    - name: Set time zone
+      run: sudo timedatectl set-timezone 'Asia/Shanghai'
+      
     - name: Set up Python 3.9.5
       uses: actions/setup-python@v2
       with:
