--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,10 +19,10 @@ jobs:
     - name: Set time zone
       run: sudo timedatectl set-timezone 'Asia/Shanghai'
       
-    - name: Set up Python 3.9.4
+    - name: Set up Python 3.10.0
       uses: actions/setup-python@v2
       with:
-        python-version: "3.9.4"
+        python-version: "3.10.0
     - name: 'Install dependencies'
       run: |
         python -m pip install --upgrade pip
